Add direct token authentication
